[package]
name = "asker"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Lorenzo Carbonell <lorenzo.carbonell.cerezo@gmail.com>"]
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.25", features = ["full"]}
sqlx = { version = "0.6", features = ["runtime-actix-rustls", "sqlite", "macros", "offline", "chrono"]}

axum = { version = "0.6" , features = ["multipart"] }

# Axum builds on the types in Tower
tower = "0.4"
tower-http = { version = "0.4", features = [ "trace", "fs" ] }

# Logs
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Templates
tera = "1.17"

# Utility
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
serde_yaml = "0.9"
